[gd_scene load_steps=5 format=3 uid="uid://deecl0gjbujw8"]

[ext_resource type="Script" path="res://scripts/editor.gd" id="1_rycub"]
[ext_resource type="Texture2D" uid="uid://dm8hbrvihg5j3" path="res://assets/textures/editor_tiles.png" id="2_2gel6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q85ov"]
texture = ExtResource("2_2gel6")
texture_region_size = Vector2i(128, 128)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:1/0 = 0
9:3/0 = 0
9:4/0 = 0
1:2/0 = 0
1:4/0 = 0
0:0/0 = 0
1:0/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_3cyw7"]
tile_size = Vector2i(128, 128)
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_q85ov")

[node name="level number here" type="Node2D"]
script = ExtResource("1_rycub")

[node name="DO_NOT_MOVE" type="Node" parent="."]

[node name="LEVEL_NAME" type="Node" parent="DO_NOT_MOVE"]

[node name="level name here" type="Control" parent="DO_NOT_MOVE/LEVEL_NAME"]
layout_mode = 3
anchors_preset = 0

[node name="GAME_MODE" type="Node" parent="DO_NOT_MOVE"]

[node name="Classic" type="Control" parent="DO_NOT_MOVE/GAME_MODE"]
layout_mode = 3
anchors_preset = 0

[node name="OUT_OF_BOUNDS_TOP" type="ColorRect" parent="DO_NOT_MOVE"]
offset_left = -576.0
offset_top = -504.0
offset_right = 13296.0
color = Color(1, 0.247059, 0.435294, 1)

[node name="OUT_OF_BOUNDS_LEFT" type="ColorRect" parent="DO_NOT_MOVE"]
offset_left = -576.0
offset_bottom = 13304.0
color = Color(1, 0.247059, 0.435294, 1)

[node name="LEVEL_MATRIX" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3cyw7")
format = 2
